# wiregurad_server_deploying

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  env_file  inventory.tmpl  main.tf  outputs.tf  pyproject.toml  terraform.tfvars.example  varriables.tf
.ci/: ansible-lint
ansible/: ansible.cfg  playbook.yml  wg_up.yml
ansible/roles/restore/tasks/: main.yml
ansible/roles/update_system/tasks/: main.yaml  update_centos.yaml  update_ubuntu.yaml
ansible/roles/wg_install/defaults/: main.yml
ansible/roles/wg_install/handlers/: main.yml
ansible/roles/wg_install/meta/: main.yml
ansible/roles/wg_install/tasks/: install_wg_rocky.yml  install_wg_ubuntu.yml  main.yml
ansible/roles/wg_install/templates/: wg0.conf.j2  wg_peer.j2
terraform/: inventory.tmpl  main.tf  terraform.tfvars.example  varriables.tf  versions.tf
