[tool.poetry]
name = "vpn-do"
version = "0.1.0"
description = "wireguard_deploying"
authors = ["Roman <mmm.romka@gmail.com>"]
license = "GPL"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
