[tool.poetry]
name = "vpn-do"
version = "1.0.1"
description = "wireguard_deploying"
authors = ["Roman <mmm.romka@gmail.com>"]
license = "GPL"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
pre-commit = "^3.2.2"
ansible = "^8.6.1"
commitizen = "^3.12.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
